[package]
name = "sonar_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
csv  = "1.3.0"
ctrlc = "3.4.1"
nix = "0.27.1"
pnet = "0.34.0"
colored = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"