[package]
name = "sonar_lib"
version = "0.1.1"
edition = "2021"
description = "A library for network packet analysis with sonar capabilities."
homepage = "https://github.com/Akmot9/my_logger"
authors = ["akmot9 avicocyprien@yahoo.com"]
repository = "https://github.com/Sonar-team/sonar_lib"
readme = "README.md"
keywords = ["network", "packet", "analysis"]
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
csv  = "1.3.0"
ctrlc = "3.4.1"
nix = "0.27.1"
pnet = "0.34.0"
colored = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
