[package]
name = "sonar_lib"
version = "1.4.0"
edition = "2021"
description = "A library for network packet analysis"
homepage = "https://github.com/Akmot9/my_logger"
authors = ["akmot9 avicocyprien@yahoo.com"]
repository = "https://github.com/Sonar-team/sonar_lib"
readme = "README.md"
keywords = ["network", "packet", "analysis"]
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
devtools = "0.3.0"
tauri = { version = "1.5.4", features = [ "cli", "api-all", "tracing"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

log = "0.4.20"
clap = {version = "4.4.11", features = ["derive"] }
csv  = "1.3.0"
rust_xlsxwriter = "0.62.0"
ctrlc = "3.4.1"
colored = "2.0.4"
rand = "0.8.5"
pnet = "0.34.0"
thiserror ="1.0.51"


[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
